internal/xds/translator/testdata/out/xds-ir/http-route-weighted-backend-traffic-split.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        prefix: /
      name: first-route
      route:
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
        upgradeConfigs:
        - upgradeType: websocket
        weightedClusters:
          clusters:
          - name: first-route-dest/backend/0
            weight: 50
          - name: first-route-dest/backend/1
            weight: 50
